# circleci-spa-artifact-launcher

./: Cargo.toml  Dockerfile  README.md
scripts/: csalw
src/: main.rs
