[package]
name = "circleci-spa-artifact-launcher"
version = "0.1.0"
authors = ["KITAGAWA Yasutaka <kit494way@gmail.com>"]
edition = "2018"
default-run = "circleci-spa-artifact-launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
iron = "~0.6.1"
mount = "~0.4.0"
staticfile = "~0.5.0"
